# ping-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
bot/: bot.py
bot/handlers/: base.py  healthcheck.py
bot/keyboards/: base.py
bot/services/: file_s.py  healthchecks.py  send_messages.py
bot/settings/: settings.py
